--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<div id="intro">
 						<h1>Preeti Sachanandani<br />
 						</h1>
-						<p>Data Science Professional skilled in Machine Learning and Python</p>
+						<p>Aspiring Data Analyst acquiring skills in Python, Power BI and SQL</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
